--- a/6310742181/.gitignore
+++ b/6310742181/.gitignore
@@ -16,3 +16,4 @@ yarn-error.log
 
 /public/css/app.css
 /public/js/app.js
+/public/js/node_modules_tsparticles_esm_Plugins_PolygonMask_pathseg_js.js
