--- a/6310742181/package.json
+++ b/6310742181/package.json
@@ -23,6 +23,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "mdb-ui-kit": "^3.10.2"
+        "mdb-ui-kit": "^3.10.2",
+        "react-tsparticles": "^1.41.1",
+        "typeit-react": "^2.3.2"
     }
 }
