--- a/6310742843/package.json
+++ b/6310742843/package.json
@@ -23,6 +23,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "react-bootstrap": "^2.1.2"
+        "bootstrap": "^5.1.3",
+        "react-bootstrap": "^2.1.2",
+        "react-icons": "^4.3.1"
     }
 }
