Create about page with API (get skills). Skill model and About API controller.

--- a/6310742181/package.json
+++ b/6310742181/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -23,6 +23,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "aos": "^2.3.4",
         "mdb-ui-kit": "^3.10.2",
         "react-tsparticles": "^1.41.1",
         "typeit-react": "^2.3.2"
