--- a/6310742843/package.json
+++ b/6310742843/package.json
@@ -23,6 +23,9 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@mui/material": "^5.4.2",
         "bootstrap": "^5.1.3",
         "react-bootstrap": "^2.1.2",
         "react-icons": "^4.3.1"
