--- a/6310742843/package.json
+++ b/6310742843/package.json
@@ -25,9 +25,11 @@
     "dependencies": {
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
+        "@fontsource/roboto": "^4.5.3",
         "@mui/material": "^5.4.2",
         "bootstrap": "^5.1.3",
         "react-bootstrap": "^2.1.2",
-        "react-icons": "^4.3.1"
+        "react-icons": "^4.3.1",
+        "typeit-react": "^2.3.2"
     }
 }
