--- a/6310742843/package.json
+++ b/6310742843/package.json
@@ -26,6 +26,7 @@
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@fontsource/roboto": "^4.5.3",
+        "@mui/icons-material": "^5.4.2",
         "@mui/material": "^5.4.2",
         "bootstrap": "^5.1.3",
         "react-bootstrap": "^2.1.2",
