--- a/6310742843/package.json
+++ b/6310742843/package.json
@@ -29,6 +29,7 @@
         "@mui/icons-material": "^5.4.2",
         "@mui/material": "^5.4.2",
         "bootstrap": "^5.1.3",
+        "glightbox": "^3.1.0",
         "react-bootstrap": "^2.1.2",
         "react-icons": "^4.3.1",
         "typeit-react": "^2.3.2"
